--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -518,6 +518,16 @@
             </li>
             <li>
                 <p>
+                    <strong>Feedback and User Submissions</strong>: Any feedback, suggestions, or
+                    testimonials you submit through our feedback forms or other channels may be
+                    used and displayed publicly on our website, social media platforms, marketing
+                    materials, or other online platforms. By submitting feedback, you grant us
+                    the right to use, modify, reproduce, and distribute your submissions for any
+                    purpose without compensation.
+                </p>
+            </li>
+            <li>
+                <p>
                     <strong>Legal Requirements</strong>: We may disclose your information to law
                     enforcement, government authorities, or other third parties when we are legally
                     compelled to do so, or when we believe it is necessary to comply with legal
