--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -406,6 +406,17 @@
                 the functionality of Mind Map Wizard. We do not guarantee that any specific
                 feature or part of the Service will always be available.</p>
 
+            <h3>5.4. Content Moderation</h3>
+            <p>Mind Map Wizard reserves the right to moderate all shared mind maps and user-generated content. We may remove or delete any content that violates these Terms, without prior notice. We do not endorse, represent, or guarantee the completeness, truthfulness, accuracy, or reliability of any shared user-generated content.</p>
+
+            <h3>5.5. Shared Mind Maps</h3>
+            <p>When you choose to share a mind map publicly, you understand and agree that:</p>
+            <ol>
+                <li>The content may be viewed by other users of Mind Map Wizard</li>
+                <li>We may remove the shared mind map immediately and without notice if it violates our Terms</li>
+                <li>We are not responsible for any consequences that may arise from sharing your mind maps</li>
+            </ol>
+
             <h2>6. User Conduct</h2>
             <p>When using Mind Map Wizard, you agree NOT to:</p>
             <ol>
