--- a/help/mind-map-editing.html
+++ b/help/mind-map-editing.html
@@ -603,10 +603,10 @@
                         <g fill="#ffffff"><path clip-rule="evenodd" d="m15 10c-2.7614 0-5 2.2386-5 5v98c0 2.761 2.2386 5 5 5h178c2.761 0 5-2.239 5-5v-98c0-2.7614-2.239-5-5-5zm-15 5c0-8.28427 6.71573-15 15-15h178c8.284 0 15 6.71573 15 15v98c0 8.284-6.716 15-15 15h-178c-8.28427 0-15-6.716-15-15z" fill-rule="evenodd"/><path d="m30 98v-68h20l20 25 20-25h20v68h-20v-39l-20 25-20-25v39zm125 0-30-33h20v-35h20v35h20z"/></g>
                     </svg>                
     # my mind map
-        - branch 1
-         - branch 2
-            - text
-            - text
+        ## branch 1
+        ## branch 2
+            ### text
+            ### text
                     </code></pre>
         <br>
         <img
@@ -682,7 +682,7 @@
                     style="position: absolute; top: 5px; right: 10px; width: 30px; height: 30px; display: flex; opacity: 0.6;">
                     <g fill="#ffffff"><path clip-rule="evenodd" d="m15 10c-2.7614 0-5 2.2386-5 5v98c0 2.761 2.2386 5 5 5h178c2.761 0 5-2.239 5-5v-98c0-2.7614-2.239-5-5-5zm-15 5c0-8.28427 6.71573-15 15-15h178c8.284 0 15 6.71573 15 15v98c0 8.284-6.716 15-15 15h-178c-8.28427 0-15-6.716-15-15z" fill-rule="evenodd"/><path d="m30 98v-68h20l20 25 20-25h20v68h-20v-39l-20 25-20-25v39zm125 0-30-33h20v-35h20v35h20z"/></g>
                 </svg>  
-    - ordered list
+    # ordered list
     1. branch
     2. branch              
             </code></pre>
@@ -699,7 +699,10 @@
                 </svg>
   [my website](https://example.com)
             </code></pre>
-        <p>This will render a clickable link on your mind map.</p>
+        <p>This will render a clickable link on your mind map: 
+            <br>
+            <a href="https://example.com" style="color: blue;">my website</a>
+        </p>
 
         <div style="height: 40px;"></div>
 
@@ -769,7 +772,7 @@
                 height="20"
                 width="20"></p>
         <!-- From Uiverse.io by vinodjangid07 -->
-        <a href="/playground.html" class="button">
+        <a href="/edit.html" class="button">
             <svg
                 xmlns="http://www.w3.org/2000/svg"
                 height="28px"
@@ -778,7 +781,7 @@
                 fill="#ffffff"
                 class="svgIcon"><path
                 d="m620-284 56-56q6-6 6-14t-6-14L540-505q4-11 6-22t2-25q0-57-40.5-97.5T410-690q-11 0-21 1t-20 5q-9 4-11 14t5 17l74 74-56 56-74-74q-7-7-17-5t-14 11q-3 10-4.5 20t-1.5 21q0 57 40.5 97.5T408-412q13 0 24.5-2t22.5-6l137 136q6 6 14 6t14-6ZM480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z"/></svg>
-            Playground
+            Open Editor
         </a>
     </div>
 
