Updated footer links

--- a/help/mind-map-editing.html
+++ b/help/mind-map-editing.html
@@ -101,6 +101,12 @@
             }
         }
 
+        .logo-text {
+            position: relative;
+            bottom: 5px;
+            left: 3px;
+        }
+
         .navbutton {
             background-color: var(--primary-color);
             padding: 6px 14px;
@@ -800,13 +806,20 @@
                 <p style="margin: 0;">
                     <a href="mailto:contact@mindmapwizard.com" class="footer-link">Contact</a>
                     <span class="separator">|</span>
+                    <a href="/privacy-policy.html" class="footer-link">Privacy Policy</a>
+                    <span class="separator">|</span>
                     <a href="/terms-of-use.html" class="footer-link">Terms of Use</a>
                     <span class="separator">|</span>
                     <a href="https://github.com/linus-sch/Mind-Map-Wizard" class="footer-link">GitHub</a>
+                    <span class="separator">|</span>
+                    <a href="/feedback.html" class="footer-link" style="text-decoration: bold;">Feedback</a>
+                    <span class="separator">|</span>
+                    <a href="/api/docs.html" class="footer-link" style="text-decoration: bold;">API</a>
                 </p>
             </div>
             <p class="copyright" style="margin: 0;">© 2025 Mind Map Wizard.</p>
         </div>
+
     </footer>
 
     <script>
@@ -816,6 +829,8 @@
                 .back();
         }
     </script>
-</body>
+    <!-- 100% privacy-first analytics -->
+    <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 
+</body>
 </html>
